# gromox

./: .editorconfig  .gitignore  HOWTO.txt  LICENSE.txt  Makefile.am  README.rst  README.txt  build  build.sh  configure.ac  default.sym  defs2php  exmidl  fdedup  grommunio-mailbox-maintenance.timer  gromox-abktpull  gromox-pffimport  install.sh  lddcheck  qconf  zcidl
AGENT_SERVICE/: Makefile  alock.c  amidb.c  amysql.c  asensor.c  asession.c  digest.c  digest.cpp  freebusy.c  freebusy.cpp  mapi_lib  pam_gromox.cpp  pandora.c  rpc_lib  rtf2html.c  rtf2html.cpp
ARCHIVE_SYSTEM/: Makefile  archive.c  migrator.c  titan.c
DOMAIN_ADMIN/: Makefile  common  fcgi_cgi.c  posidon.c
EXCHANGE_SYSTEM/: Makefile  epoll_scheduler  mapi_lib  medusa.c  rpc_lib  webkit_lib
INBOUND_ADMIN/: Makefile  webkit_lib
MRA_SYSTEM/: Makefile  apollo.c  epoll_scheduler
MTA_SYSTEM/: Makefile  README.herculiz  herculiz.c
OUTBOUND_ADMIN/: Makefile  common
SYSTEM_ADMIN/: Makefile  areadb.c  athena.c  cdnd.c  create_queue.sh  dbop_main.cpp  dispasswd.c  email_lib  enpasswd.c  event.c  event.cpp  locker.c  mailq.cpp  mapi_lib  mkmidb.c  mkmidb.cpp  mkprivate.c  mkprivate.cpp  mkpublic.c  mkpublic.cpp  monitor.c  rebuild.c  rebuild.cpp  rsyncd.c  rsyncer.c  session.c  status_rpc.c  synchronization_rpc.c  timer.c  timer.cpp  userinfo.c
build-aux/: php.m4
data/: (GMT_+01:00).tzd  401-0.abkt  401-2.abkt  402-3.abkt  402-6.abkt  403-0.abkt  403-1.abkt  403-3.abkt  403-6.abkt  405-1.abkt  405-200.abkt  405-6.abkt  406-1.abkt  406-6.abkt  407-2.abkt  408-2.abkt  408-3.abkt  408-6.abkt  409-2.abkt  409-200.abkt  409-6.abkt  40b-1.abkt  40c-1.abkt  40c-2.abkt  40c-3.abkt  40d-2.abkt  40d-6.abkt  40e-2.abkt  40e-6.abkt  40f-0.abkt  410-1.abkt  410-3.abkt  411-0.abkt  411-2.abkt  411-3.abkt  411-6.abkt  412-2.abkt  412-200.abkt  412-3.abkt  412-6.abkt  (+414 more)
doc/: adaptor.8gx  adaptor.cfg.5gx  alias_resolve.4gx  alias_translator.4gx  alock.8gx  alock.cfg.5gx  amidb.8gx  amidb.cfg.5gx  amysql.8gx  amysql.cfg.5gx  apollo.8gx  archive.8gx  archive_agent.4gx  asensor.8gx  asensor.cfg.5gx  asession.8gx  asession.cfg.5gx  at_client.4gx  athena.8gx  authmgr.4gx  authmgr.cfg.5gx  authn_mysql.4gx  authtry.8gx  autoconfig.7  autodiscover.4gx  autodiscover.7  autodiscover.8gx  bl_delete.8gx  cdnd.8gx  cdnd.cfg.5gx  cgkrepair.8gx  changelog.rst  changelog.txt  charset.rst  cidb.8gx  cidb.cfg.5gx  cleaner.8gx  da.cfg.5gx  da_daemon.8gx  ddbg.1gx  (+181 more)
exch/: abktplug.cpp  at_client.cpp  authmgr.cpp  authmgr.hpp  bounce_exch.cpp  codepage_lang.cpp  codepage_lj.cpp  dnsbl_filter.cpp  exchange_rfr.cpp  fcgid.cpp  gab.cpp  ip6_container.cpp  ip6_filter.cpp  istore.cpp  lang_charset.cpp  ldap_adaptor.cpp  ldap_adaptor.h  ldap_adaptor.hpp  localeplug.cpp  log_plugin.cfg  log_plugin.cpp  logthru.cpp  mime_extension.cpp  mime_extension.txt  mod_proxy.cpp  ms_locale.cpp  ndr.cpp  oab.cpp  oxdisco.cpp  oxdisco.hpp  oxdisco_review.cpp  oxdisco_v2.cpp  proxy.txt  rfr.cpp  str_table.cpp  textmapplug.cpp  timer_agent.cfg  timer_agent.cpp  user_filter.cpp
lib/: ab_tree.cpp  alloc_context.cpp  array.cpp  assoc_array.cpp  bounce_gen.cpp  bounce_mda.cpp  config_file.cpp  console_server.cpp  contexts_pool.cpp  cookie_parser.cpp  cryptoutil.cpp  dbhelper.cpp  dbop_mysql.cpp  dbop_sqlite.cpp  dir_tree.cpp  double_list.cpp  errno.cpp  exmdb_client.cpp  exmdb_client2.cpp  exmdb_ext.cpp  fifo.cpp  fileio.cpp  files_allocator.cpp  fopen.cpp  freebusy.cpp  getmxbyname.c  guid.cpp  guid2.cpp  haproxy.cpp  int_hash.cpp  lib_buffer.cpp  list_file.cpp  localemap.cpp  mail_func.cpp  mail_func2.cpp  mem_file.cpp  oxoabkt.cpp  process.cpp  rfbl.cpp  ruleproc.cpp  (+16 more)
mda/: alias_resolve.cpp  alias_translator.cpp  from_replace.cpp  junk.cpp  lda.cpp  mdabounce.cpp  mdabounce.hpp  message_enqueue.cpp  midb_agent.cfg  midb_agent.cpp  remote_delivery.cpp
mra/: event_proxy.cfg  event_proxy.cpp  event_stub.cpp  midb_agent.cfg  midb_agent.cpp  midb_agent.hpp
php_mapi/: ext.hpp  ext_pack.cpp  ext_pack.h  mapi.cpp  mapi.ini  mapi.stub.php  mapi_arginfo.hpp  php_mapi.h  rpc_ext.cpp  rpc_ext.h  type_conversion.cpp  type_conversion.h  type_conversion.hpp  types.h  zarafa_client.cpp  zarafa_client.h  zclient.cpp
system/: cleaner.cfg  grommunio-mailbox-maintenance.service  gromox-adaptor.tps  gromox-agent.target  gromox-alock.tps  gromox-amidb.tps  gromox-amysql.tps  gromox-archive.target  gromox-asensor.tps  gromox-asession.tps  gromox-cdnd.tps  gromox-cidb.tps  gromox-cleaner.service  gromox-cleaner.timer  gromox-da.target  gromox-da_daemon.tps  gromox-delivery-queue.tps  gromox-delivery.tps  gromox-event.tps  gromox-exch.target  gromox-fcgi_cgi.tps  gromox-http.tps  gromox-imap.tps  gromox-istore.tps  gromox-locker.tps  gromox-midb.tps  gromox-monitor.tps  gromox-mra.target  gromox-mta.target  gromox-pad.tps  gromox-pop3.tps  gromox-rsync.tps  gromox-sa.target  gromox-sa_daemon.tps  gromox-scanner.tps  gromox-sensor.tps  gromox-session.tps  gromox-smtp.tps  gromox-snapshot.timer  gromox-snapshot.tps  (+6 more)
tests/: .gitignore  abktconv.cpp  bdump.cpp  bodyconv.cpp  compress.cpp  cryptest.cpp  dnsbl_check.cpp  eps_1_01_03.b  eps_1_02.b  eps_1_04.b  eps_2_05.b  epv_1.b  epv_2.b  epv_3.b  epv_4.b  epv_unpack.cpp  exrpctest.cpp  getmxbyname.c  gssauth.cpp  gxl-383.cpp  gxl-475.ics  gxl-598.ics  httppipe.pl  icalparse.cpp  jsontest.cpp  lzxpress.cpp  mboxnotify.cpp  mboxsync.cpp  mboxwalk.cpp  oxcmail_ie.cpp  ucvttest.cpp  userdb.cpp  utf8filter.cpp  utiltest.cpp  vcard.cpp  zendfake.c  zendfake.cpp  zlogin.php
tools/: abktconv.cpp  abtohex  authtry.cpp  autodiscover-request.xml  autodiscover.cpp  cgkrepair.cpp  cleaner  cleaner.cpp  compress.cpp  conf.php  create_k2g_migration_lists.sh  db.php  dbop_main.cpp  ddbg.cpp  defs2php.pl  defs2php.sh  delmsg.cpp  digest.cpp  dldcheck.cpp  dscli.cpp  duplogid  e2ghelper.cpp  edb2mt.cpp  edb_pack.cpp  edb_pack.hpp  eidprint.cpp  eml2mbox.cpp  eml2mt.cpp  enumsort  event.cpp  exchange2grommunio.ps1  exm2eml.cpp  exmidl.pl  exporter.cpp  freebusy.cpp  genimport.cpp  genimport.hpp  genmails  gromox-cleanup.sh  gromox-exm2eml  (+68 more)
(+4201 files in other folders)
